force-app/main/default/objects/Product__c/fields/All_Materials_Available__c.field-meta.xml
<CustomField>
    <fullName>All_Materials_Available__c</fullName>
    <formula>Stocked_Materials__c  =  Total_Materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Materials Available</label>
    <type>Checkbox</type>
</CustomField>