force-app/main/default/objects/Product__c/fields/Stocked_Materials__c.field-meta.xml
<CustomField>
    <fullName>Stocked_Materials__c</fullName>
    <label>Stocked Materials</label>
    <summaryFilterItems>
        <field>Product_Material__c.Quantity_Greater_than_One__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Material__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>