force-app/main/default/objects/Product__c/fields/Total_Materials__c.field-meta.xml
<CustomField>
    <fullName>Total_Materials__c</fullName>
    <label>Total Materials</label>
    <summaryForeignKey>Product_Material__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>